fix: fixed the background-color of the titles for better visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+#no-border{
+    border: none;
+}
+
 body {
     overflow-x: hidden;
     display: flex;
@@ -35,22 +39,25 @@ body {
     width: 100vw;
     height: 20vh;
     /* border: 0.1em solid black; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2em;
 }
 
 .titulo-superior {
-    width: 100vw;
+    width: 9.9em;
     height: 10vh;
     /* border: 0.1em solid black; */
     display: flex;
     justify-content: center;
     align-items: end;
     font-size: 2.8em;
-    background: linear-gradient(45deg, violet, indigo, blue, green, yellow, orange, red);
+    background: linear-gradient(45deg,blue, green);
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
     font-weight: bold;
-    margin-top: 0.4em;
     cursor: pointer;
     font-family: 'Fredericka the Great', cursive;
 }
@@ -61,7 +68,7 @@ body {
 }
 
 .titulo-inferior {
-    width: 100vw;
+    width: 28em;
     height: 10vh;
     /* border: 0.1em solid black; */
     display: flex;
@@ -107,7 +114,7 @@ body {
     }
 }
 
-/* INDEX */
+/* MENU */
 
 .div-video {
     width: 100vw;
@@ -128,6 +135,7 @@ body {
     align-items: center;
     background: radial-gradient(circle at 100% 100%, #212325 0%, #46494f 50%, #46494f 50%, #212325 100%);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    margin-top: 3em;
 }
 
 .contenedor-video-presentacion {
@@ -177,7 +185,7 @@ body {
     color: #fff;
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
     font-family: 'Monoton', cursive;
-    margin-bottom: 3em;
+    margin-bottom: 1em;
     font-size: 1em;
     transition: 0.5s;
 }
@@ -196,13 +204,21 @@ body {
     color: #fff;
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
     font-family: 'Monoton', cursive;
-    margin-bottom: 3em;
+    margin-bottom: 1em;
     font-size: 1em;
     transition: 0.5s;
 }
 
 .boton-play:hover,
-.boton-instrucciones:hover, .boton-volver:hover {
+.boton-instrucciones:hover {
+    margin-bottom: 1.5em;
+    margin-right: 0.5em;
+    box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+    cursor: pointer;
+}
+
+
+.boton-volver:hover {
     margin-bottom: 3.5em;
     margin-right: 0.5em;
     box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
@@ -215,16 +231,25 @@ body {
     color: inherit;
 }
 
-/* INSTRUCTIONS */
+/* EXPLICACION */
 
 .div-explicacion {
-    width: 96vw;
-    height: 78vh;
-    /* border: 0.1em solid black; */
+    width: 94.5vw;
+    height: 58vh;
+    /* border: 0.1em solid white; */
     color: white;
-    padding-left: 2em;
-    padding-right: 2em;
- 
+    padding-left: 2.5em;
+    padding-right: 2.5em;
+    margin-top: 1.5em;
+}
+
+.div-background-white-explicacion{
+    background-color: #ffffff71;
+    width: 28em;
+    height: 20vh;
+    border: 0.1em solid black;
+    border-radius: 1.2em;
+    text-align: center;
 }
 
 .texto-explicacion{
@@ -236,10 +261,10 @@ body {
 }
 
 .grande{
-    font-size: larger;
+    font-size:x-large;
     text-align: center;
     font-weight: bold;  
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
 }
 
 .boton-volver{
@@ -262,12 +287,12 @@ body {
 
 .div-boton-volver{
     width: 96vw;
-    height: 10vh;
+    height: 12vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 2.8em;
-    /* border: 0.1em solid black; */
+    margin-top: 1.7em;
+    /* border: 0.1em solid white; */
 }
 
 .div-boton-volver a{
@@ -275,7 +300,7 @@ body {
     color: inherit;
 }
 
-/* WELCOME */
+/* WELCOME(INDEX) */
 
 .div-izquierdo, .div-derecho{
     width: 50vw;
@@ -300,7 +325,7 @@ body {
 .div-background-white{
     background-color: #ffffff71;
     width: 28em;
-    height: 17em;
+    height: 14em;
     border: 0.1em solid black;
     border-radius: 1.2em;
     text-align: center;
